# phaseIIHack2

./: .env  .gitignore  CHATBOT_FIX_COMPLETE.md  IMPLEMENTATION_LOG.md  PHASE3_SUMMARY.md  QUICKSTART.md  README.md  TEST_CHATBOT.md  VERCEL_ENV.md  demo_chatbot.py  docker-compose.yml  test_chat_endpoint.py  vercel.json
.claude/: settings.local.json
.claude/Skills/: api-client-generator.md  api-endpoint-generator.md  better-auth-config.md  configure-chatkit.md  crud-operations-builder.md  db-migration-creator.md  env-config-manager.md  error-handler-generator.md  form-component-builder.md  handle-errors-confirmations.md  integrate-openai-agents.md  jwt-auth-middleware.md  manage-conversation-db.md  map-nl-to-tools.md  monorepo-structure-setup.md  nextjs-page-builder.md  setup-mcp-server.md  sqlmodel-schema-creator.md
.claude/agents/: api-contract-validator.md  auth-architect.md  spec-writer.md  (+9 more)
backend/: .dockerignore  .env.example  .flake8  .gitignore  .isort.cfg  Dockerfile  HUGGINGFACE_ENV.txt  README.md  alembic.ini  check_tasks.py  database.py  debug_auth.py  debug_log.txt  main.py  models.py  pyproject.toml  recreate_db.py  test_connectivity.py  test_db.py
backend/lib/: auth.py  errors.py
backend/mcp/: __init__.py  tools.py
backend/migrations/: env.py
backend/migrations/versions/: 002_add_priority_due_date.py  003_add_tags_tables.py  004_add_conversation_message_tables.py  20251229_initial_tables.py
backend/routes/: auth.py  chat.py  tags.py  tasks.py  users.py
backend/services/: __init__.py  cohere.py
frontend/: middleware.ts  package-lock.json
(+70 files in other folders)
